{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 60,
  "lineage": "a71e5b15-d916-9f1d-fdf3-1d5a15b37946",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:452983298586:instance/i-008acc924190c459a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-008acc924190c459a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_account_1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f668d03f85668cfd",
            "private_dns": "ip-172-31-55-94.ec2.internal",
            "private_ip": "172.31.55.94",
            "public_dns": "ec2-18-208-119-129.compute-1.amazonaws.com",
            "public_ip": "18.208.119.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-059148830db576ef1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example-instance",
              "terraform-ssh-instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06509c7e6f9c8d5c8",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-example",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb0240ca2e34081b",
              "sg-0c66d07341d064db9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_security_group.instance",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:security-group/sg-0bb0240ca2e34081b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb0240ca2e34081b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "452983298586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-063380958c8b19051"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:security-group/sg-0c66d07341d064db9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c66d07341d064db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-ssh-instance",
            "name_prefix": "",
            "owner_id": "452983298586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-063380958c8b19051"
          }
        }
      ]
    }
  ]
}